# EyeCare-20-20-20

./: .gitignore  PLAN.md  README.md
.github/: release.yml
.github/workflows/: release.yml
frontend/: app.js  index.html  styles.css
scripts/: Install.command  build-dmg.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src-tauri/src/app/: app_state.rs  break_manager.rs  mod.rs  timer_engine.rs
src-tauri/src/data/: mod.rs  stats_store.rs
src-tauri/src/system/: mod.rs  screen_monitor.rs
src-tauri/src/ui/: tray.rs
